--- a/style.css
+++ b/style.css
@@ -278,6 +278,9 @@ img {
 .fondo-card-dark{
   background:rgba(80, 80, 80, 1);
 }
+.fondo-card-claro{
+  background: rgb(244, 132, 173);
+}
 
 .fondo-nombre-dark{
   background: rgba(20, 20, 20, 1);
