--- a/style.css
+++ b/style.css
@@ -1,34 +1,60 @@
+/* Resoluciones de pantalla:
+- iphone 13 pro ; Safari ; 390 x 844
+- Samsung A-53 ; Chrome ; 384 x 854
+- Monitor HP E232; Chrome: 1920 X 1080
+- Macbook Pro: Chrome: 1280 X 800
+-
+- Un televisor Samsung 32 pulgadas 4K;??; 3840 x 2160
+ */
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-  /* color-scheme: light; */
-  color: rgba(205, 205, 205, 1);
-  /* background-color:rgba(50, 50, 50, 0.8); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-fondo-oscuro:rgba(52, 52, 52, 0.9);
-  --color-fondo-tarjeta:rgba(80, 80, 80, 1);
-  --color-fondo-panel:rgba(170, 170, 170, 0.9);
 
-  --color-fuente-valor: rgba(255, 255, 255, 1);
-  --color-fuente-nombre: rgba(200, 200, 200, 0.9);
+}
 
+button,
+fieldset,
+input,
+legend,
+select,
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+legend,
+fieldset,
+select,
+textarea,
+input,
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 
 * {
   padding: 0;
   margin: 0;
-  /* box-sizing: border-box; */
 }
 
 body {
-
-  background: var(--color-fondo-oscuro);
+  /* padding: 0.3em 1em 0.3em 1em; */
+  background: rgba(52, 52, 52, 0.9);;
   /* font-family: sans-serif; */
 }
 
@@ -47,15 +73,16 @@ img {
 
 .panel{
   border-radius: 0.5em;
-  background-color: var(--color-fondo-panel);
+  background-color: rgba(170, 170, 170, 0.9); 
 
   /* min-width: 300px;    */
   margin: 0.5em 2em 0em 2em;
   padding: 0.3em 1em 1em 1em;
+  
 
-  -webkit-box-shadow: 0px 5px 20px 2px rgba(90, 90, 84, 1);
+  /* -webkit-box-shadow: 0px 5px 20px 2px rgba(90, 90, 84, 1);
   -moz-box-shadow: 0px 5px 20px 2px rgba(90, 90, 84, 1);
-  box-shadow: 0px 5px 20px 2px rgba(90, 90, 84, 1);
+  box-shadow: 0px 5px 20px 2px rgba(90, 90, 84, 1); */
 }
 
 .container-cards {
@@ -75,6 +102,7 @@ img {
 
 
   gap: 1em;
+  
 
 }
 
@@ -85,8 +113,9 @@ img {
   align-self:stretch;
 
   /* max-width: 600px; */
-  box-shadow: 0.1em 0.5em 1em 0.1em rgba(32,32,32,0.3);
-
+  /* box-shadow: 0.2em 0.5em 1em 0.2em rgba(32,32,32,0.3); */
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  /* min-width: 290px; */
 }
 
 .flex-card {
@@ -131,6 +160,7 @@ img {
     justify-items: stretch;
     align-items: stretch;
 
+
 }
 
 /* Divs del GRID del indicador Número*/
@@ -139,18 +169,21 @@ img {
   /* grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end | itemname;*/
   grid-area: 1 / 2 / 2 / 3;
   /* grid-area: div-ind-num-valor;  */
-  text-align: center;
-  align-self: center;
+
 
 }
 
 .div-ind-txt-valor {
   /* Muestra el valor tipo TEXTO en la primera fila (1) completa  */
   /* grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end | itemname;*/
-  grid-area: 1 / 1 / 2 / 4; 
+  grid-area: 1 / 1 / 3 / 4; 
   /* grid-area: div-ind-num-valor;  */
+  
   text-align: center;
   align-self: center;
+
+  font-size: calc(1em + 2vw);
+  margin-left: 0.5em;
 }
 
 .div-ind-nombre {
@@ -158,14 +191,26 @@ img {
   grid-area: 2 / 1 / 3 / 4;
   /* grid-area: div-ind-num-nombre;  */
   text-align: center;
-  border-top: 1px dotted white
-
+}
+.format-ind-nombre {
+  /* border-top: 1px dotted white;  */
+  font-size: calc(0.5em + 0.7vw);
+  font-style: italic;
 }
 .div-ind-fecha {
   /* Muestra la fecha en la fila 3 (ultima) y ocupa las 3 columna) */
   /* para que siempre aparezca en la base, el grid está dentro de un flex*/
   grid-area: 3 / 1 / 4 / 4;
-  border-top: 1px dotted white
+}
+
+.format-ind-valor {
+  /* border-top: 1px dotted white */
+  text-align: center;
+  align-self: center;
+
+  font-size: calc(1.5em + 5vw);
+  /* font-weight: bolder; */
+  font-weight: bolder;
 }
 
 .div-boton-izda {
@@ -191,10 +236,11 @@ img {
   height: 95%;  /* para que ocupen el % del div del grid*/
   width: 95%;
 
-  border: 0.2rem solid var(--color-fondo-tarjeta); /* tiene que tener el mismo borde que el hoover*/
+  border: 0.2rem solid rgba(0, 0, 0, 0); /* tiene que tener el mismo borde que el hoover*/
 
-  background-color: var(--color-fondo-tarjeta);
-  color: var(--color-fuente-nombre);
+  /* background-color: var(--color-fondo-tarjeta); */
+  background: rgba(0, 0, 0, 0);
+  color: rgba(200, 200, 200, 0.9);
 
 
   cursor: pointer;
@@ -204,7 +250,7 @@ img {
 .boton-1:hover {
   /* background: grey;  */
   /* color: solid var(--color-fondo-panel); */
-  border: 0.2rem solid var(--color-fondo-panel); /* tiene que tener el mismo borde que el hoover*/
+  border: 0.2rem solid rgba(170, 170, 170, 0.9);; /* tiene que tener el mismo borde que el hoover*/
 
   -webkit-box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),
   0px 10px 14px 1px rgba(0, 0, 0, 0.14),
@@ -215,84 +261,38 @@ img {
 }
 
 .boton-1:active {
-  background-color:var(--color-fondo-panel);
+  /* background-color:var(--color-fondo-panel); */
   border-color: white;
   transform: scale(0.9);
 }
 
 
 
-
-/* Para especificar formatos de los valore según el tipo*/
-
-.valor-num, .valor-hora {
-  font-size: calc(2em + 5vw);
-  /* font-weight: bolder; */
-  font-weight: bolder;
-  text-align: center;
-}
-
-
-.valor-texto {
-  /* font-size: calc(1em + 1.1vw); */
-  font-size: calc(1em + 2vw);
-  margin-left: 0.5em;
-  /* color: var(--color-fuente-valor); */
-}
-
-.valor-fechaAct{
-  font-size: calc(0.5 em + 0.5vw);
-  margin-left: 0.6em;
-}
-
-.nombre-indicador {
-  /* color: var(--color-fuente-nombre); */
-  font-size: calc(0.8em + 1vw);
-
-}
-
 .nombre-grupo {
   font-size: calc(1em + 0.8vw);
   padding: 0em 0em 0em 1em;
-  color:var(--color-fuente-valor);
+  color: rgba(255, 255, 255, 1);
   vertical-align: middle;
+}
+
+.tema-oscuro {
+  color: rgba(255, 255, 255, 1);
+  background:rgba(80, 80, 80, 1);
+}
+
+.tema-claro {
+  color: rgba(35, 35, 35, 0.9);
+  background:whitesmoke
 }
 
 .fte-color-aviso{
   color: orange;
 }
 
-.fte-color-claro{
-  color: rgba(52, 52, 52, 0.9);
-}
-
-.fte-color-dark{
-  color: rgba(255, 255, 255, 1);
-}
-
-.fte-color-nombre-cl {
-  color: rgba(200, 200, 200, 0.9);
-  /* color: rgba(198, 252, 6, 0.9); */
-}
-
-.fondo-card-dark{
-  background:rgba(80, 80, 80, 1);
-}
-.fondo-card-claro{
-  background: rgb(244, 132, 173);
-}
-
-.fondo-nombre-dark{
-  background: rgba(20, 20, 20, 1);
-  color: rgba(198, 252, 6, 0.9);
-}
-.fondo-nombre-claro{
-  background: rgba(255, 255, 255, 1);
-  color: rgba(198, 252, 6, 0.9);
-}
-
-.icono-masmenos {
-  width: 4vw;
+.valor-novalido {
+  box-shadow: inset 0 0 0 5px orange;
+  color: orange;
+  border-radius: 3px;
 }
 
 .ocultar-elemento {
@@ -301,7 +301,7 @@ img {
 
 
 .tarjeta-borde-ambiente {
-  border-left: 10px solid rgba(220, 0, 0, 0.9);
+  border-left: 15px solid rgba(220, 0, 0, 0.9);
   border-right: 3px solid rgba(220, 0, 0, 0.9);
   border-image: linear-gradient(to bottom, #3acfd5 0%, #3a4ed5 100%) 1;
   /* background: linear-gradient(to bottom, #3acfd5 0%, #3a4ed5 100%); */
@@ -309,14 +309,14 @@ img {
 
 .tarjeta-borde-agua {
   /* border-left: 15px solid rgba(0, 0, 240, 0.9); */
-  border-left: 10px solid;
+  border-left: 15px solid;
   border-right: 2px solid;
   border-image: linear-gradient(to bottom, yellow 0%, green 100%) 0.5;
   /* background: linear-gradient(to bottom, yellow 0%, green 100%); */
 }
 
 .tarjeta-borde-obs {
-  border-left: 10px solid rgba(220,220,220,0.9);
+  border-left: 15px solid rgba(220,220,220,0.9);
   border-right: 2px solid  rgba(220,220,220,0.9);
   border-image: linear-gradient(to bottom, red, yellow 100%) 1;
   /* background: linear-gradient(to bottom, red, yellow 100%); */
@@ -326,6 +326,42 @@ img {
   border-style: dotted;
   border-left-color: grey;
   border-width: 1px;
+}
+
+
+
+.input-obs2 {
+  font-size: calc(0.5em + 0.5vw);
+  height: 95%;
+  width: 95%;
+  align-items: center;
+  text-align: center;
+  color: rgb(203, 203, 203);
+
+  /* box-shadow: inset #abacaf 0 0 0 0px; */
+  border: 0;
+  background: rgba(0, 0, 0, 0);
+  appearance: none;
+  /* position: relative; */
+  border-radius: 3px;
+  /* padding: 9px 12px; */
+  line-height: 1.5;
+
+  flex-grow:0;
+  flex-shrink:0;
+  flex-basis:0;
+
+  transition: all .2s ease;
+  :hover{
+      box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 2px;
+  }
+  :focus{
+      background: whitesmoke;
+      outline: 0;
+      box-shadow: 0 0 0 0 #fff inset, #1de9b6 0 0 0 3px;
+  }
+
+
 }
 
 
